# stm32f4-rtic

./: .gitignore  Cargo.toml  README.md  pins.toml  post.sh
.cargo/: config.toml
src/: gp8403.rs  main.rs  smoltcp_phy.rs
